@@ -130,6 +130,21 @@ dnl this enable the rule in test/Makefile.am
 AM_CONDITIONAL(BUILD_TESTS, test x$build_tests = xyes)
 AC_SUBST(glib_prefix)
 
+dnl enable runtime debugging code
+AC_MSG_CHECKING(whether to enable runtime debugging code)
+AC_ARG_ENABLE(
+  debug,
+  AC_HELP_STRING([--enable-debug],[enable runtime debugging code (default=no)]),
+  ,
+  [enable_debug="no"])
+AC_MSG_RESULT($enable_debug)
+if test "$enable_debug" = "yes"; then
+  TRACE="print"
+else
+  TRACE="#"
+fi
+AC_SUBST(TRACE)
+
 
 AC_CONFIG_FILES([Makefile
 gtk-doc.pc
