@@ -1,3 +1,14 @@
+2008-04-11  Stefan Kost  <ensonic@users.sf.net>
+
+	* TODO:
+	* configure.in:
+	  Idea about the tracing. Not that practical as it is.
+
+	* gtkdoc-mkdb.in:
+	* gtkdoc-mktmpl.in:
+	  Unify file-error messages. Improve warning detail. Fix undocumented
+	  status for template less runs.
+
 2008-04-10  Stefan Kost  <ensonic@users.sf.net>
 
 	* TODO:
